<resources>
    <string name="app_name">Banco AsoDesUnidos</string>
    <string name="welcome_message" />
    <string name="login_button_text">Iniciar sesion</string>
    <string name="register_button_text">Registrarse</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="log_in">Iniciar Sesión</string>
    <string name="go_back">Volver atrás</string>
    <string name="todo">TODO</string>
    <string name="registrarse">Registrarse</string>
    <string name="tipo_usuario_prompt">Seleccione el tipo de usuario</string>
    <string name="ingrese_su_tel_fono">Ingrese su teléfono</string>
    <string name="ingrese_su_email">Ingrese su email</string>
    <string name="tel_fono">Teléfono:</string>
    <string name="ingrese_su_clave">Ingrese su clave</string>
    <string name="clave">Clave:</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="nombre">Nombre:</string>
    <string name="ingrese_su_telefono" />
    <string name="telefono" />
    <string name="tipo_usuario" />
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="mi_informacion_personal">Mi informacion personal</string>
    <string name="calcular_cuota">Calcular Cuota</string>
    <string name="gestionar_mis_ahorros">Gestionar mis ahorros</string>
    <string name="gestionar_mis_pr_stamos">Gestionar mis préstamos</string>
    <string name="bienvenido_a_cliente">Bienvenido(a) Cliente</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="contacto">Contacto</string>
    <string name="ver_mis_pr_stamos">Ver mis préstamos</string>
    <string name="calcula_tu_cuota">Calcula tu Cuota</string>
    <string name="gestionar_mi_ahorro">Gestionar mi ahorro</string>
    <string name="asignar_un_pr_stamo">Asignar un Préstamo</string>
    <string name="agregar_un_cliente_nuevo">Agregar un cliente nuevo</string>
    <string name="bienvenido_administrador">Bienvenido Administrador</string>
    <string name="option">Option</string>
    <string name="asignar_un_pr_stamo_a_un_cliente_existente">Asignar un préstamo a un cliente existente</string>
    <string name="mensaje_administrador">Vista de administración</string>
    <string name="asignar_prestamos_a_clientes">Asignar prestamo a cliente</string>
    <string name="monto_prestamo">Monto prestamo</string>
    <string name="asignar">Asignar</string>
    <string name="salario">Salario</string>
    <string name="agregar_cliente">Agregar nuevo cliente</string>
    <string name="cedula">Cedula</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="c_dula">Cedula</string>
    <string name="vista_cliente">Vista cliente</string>
    <string name="registro_de_usuarios">Registro de usuarios</string>
    <string name="ver_info_personal"> Información personal  </string>
    <string name="btnModificarInfoP">Modificar</string>
    <string name="selecciona_un_tipo_de_prestamo">Selecciona el tipo de prestamo</string>
    <string name="selecciona_un_cliente">Selecciona un cliente</string>
    <string name="selecciona_el_plazo_del_prestamo">Selecciona el plazo del prestamo</string>
    <string name="monto_de_cuota">Monto de cuota</string>
    <string name="fecha_finalizacion">Fecha finalizacion</string>
    <string name="fecha_finalizaci_n">Fecha finalización:</string>
    <string name="realizar_pago">Realizar pago</string>
    <string name="formato_moneda">$ %1$.2f</string>
    <string name="formato_cuotas">$ %1$.2f</string>
    <string name="vista_developer">Vista Developer</string>
    <string name="registro_de_administrador">Registro de Administrador</string>
    <string name="tipo_de_pr_stamo">Tipo de préstamo:</string>
    <string name="monto">Monto:</string>
    <string name="plazo">Plazo:</string>
    <string name="tasa_de_inter_s">Tasa de interés:</string>
    <string name="fecha_de_creaci_n">Fecha de creación:</string>
    <string name="fecha_de_finalizaci_n">Fecha de finalización:</string>
    <string name="estado">Estado:</string>
    <string name="saldo">Saldo:</string>
    <string name="mis_pr_stamos">Mis préstamos</string>
    <string name="plazo_meses">Plazo (meses)</string>
    <string name="monto_del_pr_stamo">Monto del préstamo</string>
    <string name="nombre_del_cliente">Nombre del cliente</string>
    <string name="monto_cuota">Monto cuota</string>
    <string name="tipo_prestamo">Tipo prestamo</string>
    <string name="tasa_interes">tasa de interes</string>
    <string name="fecha_inicio">fecha inicio</string>
    <string name="id_prestamo">Id prestamo</string>
    <string name="monto_prestamo_solicitado">Monto prestamo solicitado</string>
    <string name="selecciona_la_cantidad_de_cuotas_a_cancelar">Selecciona la cantidad de cuotas a cancelar:</string>
    <string name="saldo_prestamo">Saldo prestamo</string>
    <string name="monto_total_a_pagar">Monto total a pagar:</string>
    <string name="cantidad_de_cuotas">Cantidad de cuotas:</string>
    <string name="tipo_de_usuaruario">Tipo de usuario</string>
    <string name="registrar_usuario">Registrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cuotas_restantes">Cuotas restantes</string>
    <string-array name="tipo_usuario_opciones">
        <item>Developer</item>
        <item>Admin</item>
    </string-array>
    <string-array name="tipoCreditoOptions">
        <item>Hipotecario</item>
        <item>Educación</item>
        <item>Personal</item>
        <item>Viajes</item>
    </string-array>

    <string-array name="plazoOptions">
        <item>12 meses</item>
        <item>24 meses</item>
        <item>36 meses</item>
        <item>48 meses</item>
    </string-array>

</resources>
