<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_tipo_prestamo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_de_pr_stamo" />

    <TextView
        android:id="@+id/tv_monto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monto" />

    <TextView
        android:id="@+id/tv_plazo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plazo" />

    <TextView
        android:id="@+id/tv_tasa_interes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasa_de_inter_s" />

    <TextView
        android:id="@+id/tv_monto_cuota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Monto de cuota:" />

    <TextView
        android:id="@+id/tv_fecha_creacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_de_creaci_n" />

    <TextView
        android:id="@+id/tv_fecha_finalizacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_de_finalizaci_n" />

    <TextView
        android:id="@+id/tv_saldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saldo" />

    <TextView
        android:id="@+id/tv_estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado" />

</LinearLayout>
