
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:src="@mipmap/ic_prestamo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMontoPrestamo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monto_del_pr_stamo"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvPlazo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plazo_meses"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvMontoCuota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monto_cuota"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvTipoPrestamo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo_prestamo"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvTasa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tasa_interes"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvFechaCreacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_inicio"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvFechaFinalizacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_finalizacion"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnPagarCuota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pagar cuota" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

